feat : App에서 todos 상태 사용

--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -13,6 +13,11 @@
   align-items: center;
 }
 
+.checkbox.checked {
+  color: rgb(135, 135, 135);
+  text-decoration: line-through;
+}
+
 .checkbox i {
   font-size: 1.2rem;
 }
