--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   border-top: 1px solid rgb(255, 108, 54);
+  border-bottom: 1px solid rgb(255, 108, 54);
   color: rgb(255, 108, 54);
 }
 
